Fix path to trx files inside test results zip

--- a/.github/workflows/report-test-results.yaml
+++ b/.github/workflows/report-test-results.yaml
@@ -13,5 +13,5 @@ jobs:
         with:
           artifact: "test-results"
           name: "Test Results"
-          path: "*.trx"
+          path: "**/TestResults/*.trx"
           reporter: "dotnet-trx"
