Included readme to csproj for nuget package
Included readme to csproj for nuget package

--- a/src/OneBeyond.Studio.Crosscuts/OneBeyond.Studio.Crosscuts.csproj
+++ b/src/OneBeyond.Studio.Crosscuts/OneBeyond.Studio.Crosscuts.csproj
@@ -6,7 +6,12 @@
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <None Include="readme.md" Pack="true" PackagePath="\"/>
+</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
