--- a/src/OneBeyond.Studio.Crosscuts/OneBeyond.Studio.Crosscuts.csproj
+++ b/src/OneBeyond.Studio.Crosscuts/OneBeyond.Studio.Crosscuts.csproj
@@ -1,17 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Crosscuts</Title>
+    <PackageId>OneBeyond.Studio.Crosscuts</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
     <NoWarn>$(NoWarn);1591</NoWarn>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   
   <ItemGroup>
     <None Include="readme.md" Pack="true" PackagePath="\"/>
-</ItemGroup>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
