--- a/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
+++ b/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
@@ -1,12 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Domain.SharedKernel</Title>
+    <PackageId>OneBeyond.Studio.Domain.SharedKernel</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="11.1.0" />
