--- a/src/OneBeyond.Studio.Hosting.AspNet/OneBeyond.Studio.Hosting.AspNet.csproj
+++ b/src/OneBeyond.Studio.Hosting.AspNet/OneBeyond.Studio.Hosting.AspNet.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Hosting.AspNet</Title>
+    <PackageId>OneBeyond.Studio.Hosting.AspNet</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Ensure.That" Version="10.1.0" />
