--- a/src/OneBeyond.Studio.Infrastructure.Azure/OneBeyond.Studio.Infrastructure.Azure.csproj
+++ b/src/OneBeyond.Studio.Infrastructure.Azure/OneBeyond.Studio.Infrastructure.Azure.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Infrastructure.Azure</Title>
+    <PackageId>OneBeyond.Studio.Infrastructure.Azure</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
