--- a/src/OneBeyond.Studio.Infrastructure.RabbitMQ/OneBeyond.Studio.Infrastructure.RabbitMQ.csproj
+++ b/src/OneBeyond.Studio.Infrastructure.RabbitMQ/OneBeyond.Studio.Infrastructure.RabbitMQ.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Infrastructure.RabbitMQ</Title>
+    <PackageId>OneBeyond.Studio.Infrastructure.RabbitMQ</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
