--- a/src/OneBeyond.Studio.EntityAuditing/OneBeyond.Studio.EntityAuditing.SqlServer/OneBeyond.Studio.EntityAuditing.SqlServer.csproj
+++ b/src/OneBeyond.Studio.EntityAuditing/OneBeyond.Studio.EntityAuditing.SqlServer/OneBeyond.Studio.EntityAuditing.SqlServer.csproj
@@ -1,14 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Title>OneBeyond.Studio.EntityAuditing.SqlServer</Title>
     <PackageId>OneBeyond.Studio.EntityAuditing.SqlServer</PackageId>
     <TargetFramework>net7.0</TargetFramework>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="readme.md" />
+    <None Include="readme.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
