--- a/src/OneBeyond.Studio.Infrastructure.RabbitMQ/OneBeyond.Studio.Infrastructure.RabbitMQ.csproj
+++ b/src/OneBeyond.Studio.Infrastructure.RabbitMQ/OneBeyond.Studio.Infrastructure.RabbitMQ.csproj
@@ -1,10 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Infrastructure.RabbitMQ</Title>
+    <PackageId>OneBeyond.Studio.Infrastructure.RabbitMQ</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
