--- a/src/OneBeyond.Studio.Application.SharedKernel/OneBeyond.Studio.Application.SharedKernel.csproj
+++ b/src/OneBeyond.Studio.Application.SharedKernel/OneBeyond.Studio.Application.SharedKernel.csproj
@@ -1,12 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Application.SharedKernel</Title>
+    <PackageId>OneBeyond.Studio.Application.SharedKernel</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="DelegateDecompiler" Version="0.32.0" />
