--- a/src/OneBeyond.Studio.EntityAuditing/OneBeyond.Studio.EntityAuditing.Domain/OneBeyond.Studio.EntityAuditing.Domain.csproj
+++ b/src/OneBeyond.Studio.EntityAuditing/OneBeyond.Studio.EntityAuditing.Domain/OneBeyond.Studio.EntityAuditing.Domain.csproj
@@ -1,8 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.EntityAuditing.Domain</Title>
+    <PackageId>OneBeyond.Studio.EntityAuditing.Domain</PackageId>
     <TargetFramework>net7.0</TargetFramework>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\OneBeyond.Studio.Domain.SharedKernel\OneBeyond.Studio.Domain.SharedKernel.csproj" />
