--- a/src/OneBeyond.Studio.EntityAuditing/OneBeyond.Studio.EntityAuditing.Infrastructure/OneBeyond.Studio.EntityAuditing.Infrastructure.csproj
+++ b/src/OneBeyond.Studio.EntityAuditing/OneBeyond.Studio.EntityAuditing.Infrastructure/OneBeyond.Studio.EntityAuditing.Infrastructure.csproj
@@ -1,8 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.EntityAuditing.Infrastructure</Title>
+    <PackageId>OneBeyond.Studio.EntityAuditing.Infrastructure</PackageId>
     <TargetFramework>net7.0</TargetFramework>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
