--- a/src/OneBeyond.Studio.Hosting.AspNet/OneBeyond.Studio.Hosting.AspNet.csproj
+++ b/src/OneBeyond.Studio.Hosting.AspNet/OneBeyond.Studio.Hosting.AspNet.csproj
@@ -1,10 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>OneBeyond.Studio.Hosting.AspNet</Title>
+    <PackageId>OneBeyond.Studio.Hosting.AspNet</PackageId>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="readme.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Ensure.That" Version="10.1.0" />
