--- a/src/OneBeyond.Studio.DataAccess.EFCore/OneBeyond.Studio.DataAccess.EFCore.csproj
+++ b/src/OneBeyond.Studio.DataAccess.EFCore/OneBeyond.Studio.DataAccess.EFCore.csproj
@@ -13,16 +13,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="readme.md" Pack="true" PackagePath="\"/>
+    <None Include="readme.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
-    <PackageReference Include="Scrutor" Version="4.2.0" />
+    <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.18.0" />
-    <PackageReference Include="Thinktecture.EntityFrameworkCore.Relational" Version="7.0.0-beta03" />
+    <PackageReference Include="Thinktecture.EntityFrameworkCore.Relational" Version="7.1.0" />
     <PackageReference Include="DelegateDecompiler.EntityFrameworkCore5" Version="0.32.0" />
   </ItemGroup>
 
