--- a/src/OneBeyond.Studio.Application.SharedKernel.Tests/OneBeyond.Studio.Application.SharedKernel.Tests.csproj
+++ b/src/OneBeyond.Studio.Application.SharedKernel.Tests/OneBeyond.Studio.Application.SharedKernel.Tests.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
