--- a/src/OneBeyond.Studio.Crosscuts.Tests/OneBeyond.Studio.Crosscuts.Tests.csproj
+++ b/src/OneBeyond.Studio.Crosscuts.Tests/OneBeyond.Studio.Crosscuts.Tests.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
