--- a/src/OneBeyond.Studio.DataAccess.EFCore.Tests/OneBeyond.Studio.DataAccess.EFCore.Tests.csproj
+++ b/src/OneBeyond.Studio.DataAccess.EFCore.Tests/OneBeyond.Studio.DataAccess.EFCore.Tests.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
