--- a/src/OneBeyond.Studio.Infrastructure.Azure.Tests/OneBeyond.Studio.Infrastructure.Azure.Tests.csproj
+++ b/src/OneBeyond.Studio.Infrastructure.Azure.Tests/OneBeyond.Studio.Infrastructure.Azure.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
