--- a/.github/workflows/check-pr.yaml
+++ b/.github/workflows/check-pr.yaml
@@ -14,6 +14,7 @@ concurrency:
 
 jobs:
   sonarcloud:
+    name: "Sonar Cloud"  
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
