--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -16,6 +16,7 @@ jobs:
   sonarcloud:
     name: "Sonar Cloud"  
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.event.head_commit.message =~ /^Merge/    
     steps:
     - uses: actions/checkout@v3
       with:
