--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -1,11 +1,9 @@
 name: "Sonar"
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "src/**"      
+  pull_request:
+    types:
+      - closed
   workflow_dispatch:
 
 concurrency:
@@ -15,8 +13,8 @@ concurrency:
 jobs:
   sonarcloud:
     name: "Sonar Cloud"  
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.event.head_commit.message =~ /^Merge/    
     steps:
     - uses: actions/checkout@v3
       with:
