--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -1,9 +1,9 @@
 name: "Sonar"
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 concurrency:
@@ -13,7 +13,7 @@ concurrency:
 jobs:
   sonarcloud:
     name: "Sonar Cloud"  
-    if: github.event.pull_request.merged == true
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
