--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -3,7 +3,9 @@ name: "Sonar"
 on:
   push:
     branches:
-      - main
+      - "main"
+    paths:
+      - "src/**"
   workflow_dispatch:
 
 concurrency:
