--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,4 +44,4 @@ jobs:
           path: "nupkgs"
 
       - name: "Upload NuGets to nuget.org"
-        run: dotnet nuget push "nupkgs/**/*.nupkg" --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push "nupkgs/**/*.nupkg" --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json
