--- a/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
+++ b/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.1.1" />
-    <PackageReference Include="morelinq" Version="3.4.2" />
+    <PackageReference Include="MediatR" />
+    <PackageReference Include="morelinq" />
   </ItemGroup>
 
   <ItemGroup>
