--- a/src/OneBeyond.Studio.Infrastructure.RabbitMQ/OneBeyond.Studio.Infrastructure.RabbitMQ.csproj
+++ b/src/OneBeyond.Studio.Infrastructure.RabbitMQ/OneBeyond.Studio.Infrastructure.RabbitMQ.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+    <PackageReference Include="RabbitMQ.Client" />
   </ItemGroup>
 
   <ItemGroup>
