--- a/OneBeyond.Studio.Core.Mediator/OneBeyond.Studio.Core.Mediator.csproj
+++ b/OneBeyond.Studio.Core.Mediator/OneBeyond.Studio.Core.Mediator.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ensure.That" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+  </ItemGroup>
+
 </Project>
