feature: superior folder structure
feature: start removing

--- a/src/OneBeyond.Studio.Application.SharedKernel/OneBeyond.Studio.Application.SharedKernel.csproj
+++ b/src/OneBeyond.Studio.Application.SharedKernel/OneBeyond.Studio.Application.SharedKernel.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\OneBeyond.Studio.Core.Mediator\OneBeyond.Studio.Core.Mediator.csproj" />
     <ProjectReference Include="..\OneBeyond.Studio.Domain.SharedKernel\OneBeyond.Studio.Domain.SharedKernel.csproj" />
   </ItemGroup>
 
