--- a/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
+++ b/src/OneBeyond.Studio.Domain.SharedKernel/OneBeyond.Studio.Domain.SharedKernel.csproj
@@ -17,11 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" />
     <PackageReference Include="morelinq" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\OneBeyond.Studio.Core.Mediator\OneBeyond.Studio.Core.Mediator.csproj" />
     <ProjectReference Include="..\OneBeyond.Studio.Crosscuts\OneBeyond.Studio.Crosscuts.csproj" />
   </ItemGroup>
 
