--- a/src/OneBeyond.Studio.Crosscuts.Tests/OneBeyond.Studio.Crosscuts.Tests.csproj
+++ b/src/OneBeyond.Studio.Crosscuts.Tests/OneBeyond.Studio.Crosscuts.Tests.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" />
-    <PackageReference Include="FluentAssertions" />
+    <PackageReference Include="AwesomeAssertions" />
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
